# projects

C#/lab-3/: Program.cs
C#/lab-4/: Program.cs
C++/lab-1/: CMakeLists.txt  main.cpp
C++/lab-10/: CMakeLists.txt  WeatherPrint.cpp  WeatherPrint.h  WeatherRequest.cpp  WeatherRequest.h  config.json  main.cpp
C++/lab-11/: CMakeLists.txt  algorithm.h  main.cpp  xrange.h  zip.h
C++/lab-12/: CMakeLists.txt  database.cpp  database.h  database_request.cpp  main_.cpp
C++/lab-3/: CMakeLists.txt  image.cpp  image.h  main.cpp
C++/lab-4/: CMakeLists.txt  archive.cpp  archive.h  main.cpp
C++/lab-7/: CMakeLists.txt  README.md  frames_maps.h  frames_printers.cpp  frames_readers.cpp  id3v2parser.cpp  id3v2parser.h  main.cpp
C++/lab-8/: CCircularBuffer.h  CCircularBufferExt.h  CMakeLists.txt  iterator.h  main.cpp
C++/lab-9/: CMakeLists.txt  allocator.h  main.cpp  memory_pool.cpp  memory_pool.h
Go/ciletters/: letter.go  tmpl.txt
Go/cond/: cond.go
Go/digitalclock/: main.go
Go/dupcall/: dupcall.go
Go/externalsort/: sort.go
Go/fetchall/: main.go
Go/fileleak/: fileleak.go
Go/forth/: eval.go
Go/hogwarts/: courselist.go
Go/hotelbusiness/: hotels.go
Go/iprange/: example_test.go  parse_list_fuzz_test.go  y.go
Go/keylock/: keylock.go
Go/lrucache/: lru.go
Go/olympics/: main.go
Go/once/: once.go
Go/otp/: cipher.go
Go/pubsub/: my_pubsub.go  pubsub.go
Go/ratelimit/: ratelimit.go
Go/retryupdate/: update.go
Go/rwmutex/: rwmutex.go
Go/speller/: speller.go
Go/tabletest/: coverage.out  parse_duration.go  tabletest_test.go
Go/testequal/: assertions.go
Go/tparallel/: tparallel.go
Go/urlfetch/: main.go
Go/urlshortener/: main.go
Go/varfmt/: fmt.go
(+327 files in other folders)
